adds logo and centers header

--- a/polymerstarterkit/app/index.html
+++ b/polymerstarterkit/app/index.html
@@ -53,6 +53,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- will be replaced with elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endreplace-->
+
 </head>
 
 <body unresolved class="fullbleed layout vertical">
@@ -99,7 +100,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-icon-button icon="search"></paper-icon-button>
 
           <!-- Application name --> <!-- TODO: Insert app icon in middle of name -->
-          <div class="middle paper-font-display2 app-name">Bark Bites</div> 
+          <div class="middle paper-font-display2 app-name">
+            Bark 
+            <img id="headerLogo" src="/images/logo.png"> 
+            Bites
+          </div> 
 
           <!-- Application sub title -->
           <div class="bottom title"></div>
