--- a/polymerstarterkit/app/styles/app-theme.html
+++ b/polymerstarterkit/app/styles/app-theme.html
@@ -95,7 +95,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   }
 
   #mainToolbar .middle {
-    margin-left: 48px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #mainToolbar.has-shadow .middle {
