adds landscape mode to ios, pawprint, main theme color and filters

--- a/barkbites/platforms/ios/www/styles/app-theme.html
+++ b/barkbites/platforms/ios/www/styles/app-theme.html
@@ -13,7 +13,7 @@
 
   :root {
     --dark-primary-color: #303F9F;
-    --default-primary-color: #3F51B5;
+    --default-primary-color: #1EAD9E;
     --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff; /*text/icons*/
     --accent-color: #FF4081;
@@ -85,7 +85,8 @@
   }
 
   #mainToolbar .middle {
-    margin-left: 48px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #mainToolbar.has-shadow .middle {
