--- a/barkbites/platforms/ios/www/elements/bb-filter-list/bb-filter-list.html
+++ b/barkbites/platforms/ios/www/elements/bb-filter-list/bb-filter-list.html
@@ -4,11 +4,13 @@
   <!-- scoped CSS for this element -->
   <style>
     .filter-list {
-      height: 100%;
+      height: 700px;
       overflow: scroll;
+      position: relative;
     }
 
     .filter-item {
+      width: 100%;
       padding: 15px;
       border-bottom: 1px solid lightgray;
     }
@@ -18,9 +20,7 @@
   <template>
     <div class="filter-list">
     	<template is="dom-repeat" items="{{filters}}">
-        <div class="filter-item">
-      		<paper-checkbox checked="{{item.selected}}">{{item.name}}</paper-checkbox>
-        </div>
+      	<paper-checkbox checked="{{item.selected}}" class="filter-item">{{item.name}}</paper-checkbox>
     	</template>
     </div>
   </template>
