--- a/polymerstarterkit/app/elements/bb-filter-list/bb-filter-list.html
+++ b/polymerstarterkit/app/elements/bb-filter-list/bb-filter-list.html
@@ -3,15 +3,22 @@
 
   <!-- scoped CSS for this element -->
   <style>
+
     .filter-list {
       height: 700px;
       overflow: scroll;
       position: relative;
+      padding-left: 10px;
+    }
+
+    .filter-item:nth-child(0) {
+      padding-top: 0;
     }
 
     .filter-item {
       width: 100%;
-      padding: 15px;
+      padding-top: 15px;
+      padding-bottom: 15px;
       border-bottom: 1px solid lightgray;
     }
 
