--- a/polymerstarterkit/app/index.html
+++ b/polymerstarterkit/app/index.html
@@ -53,7 +53,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- will be replaced with elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endreplace-->
+  <style>
 
+  </style>
 </head>
 
 <body unresolved class="fullbleed layout vertical">
@@ -70,7 +72,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <!-- Drawer Content -->
           <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
-            <bb-filter-list></bb-filter-list>
+            <bb-filter-list class="filter-list"></bb-filter-list>
               <!-- Insert filter list here -->
 
               <!-- <a data-route="home" href="/">
@@ -102,10 +104,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <!-- Application name --> <!-- TODO: Insert app icon in middle of name -->
           <div class="middle paper-font-display2 app-name">
-            Bark 
-            <img id="headerLogo" src="images/logo.png"> 
+            Bark
+            <img id="headerLogo" src="images/logo.png">
             Bites
-          </div> 
+          </div>
 
           <!-- Application sub title -->
           <div class="bottom title"></div>
@@ -114,9 +116,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <!-- Main Content -->
         <div class="content">
-          <iron-pages attr-for-selected="data-route" selected="{{route}}">
+          <p>Im in here no matter what</p>
+          <!-- <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
-            <!-- <section data-route="home">
+            <section data-route="home">
               <paper-material elevation="1">
                 <my-greeting></my-greeting>
 
@@ -148,33 +151,33 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
               </paper-material>
 
-            </section> -->
+            </section>
 
-            <!-- <section data-route="users">
+            <section data-route="users">
               <paper-material elevation="1">
                 <h2 class="paper-font-display2">Users</h2>
                 <p>This is the users section</p>
                 <a href="/users/Rob">Rob</a>
               </paper-material>
-            </section> -->
+            </section>
 
-            <!-- <section data-route="user-info">
+            <section data-route="user-info">
               <paper-material elevation="1">
                 <h2 class="paper-font-display2">
                 User:<span>{{params.name}}</span>
                 </h2>
                 <div>This is <span>{{params.name}}</span>'s section</div>
               </paper-material>
-            </section> -->
+            </section>
 
-            <!-- <section data-route="contact">
+            <section data-route="contact">
               <paper-material elevation="1">
                 <h2 class="paper-font-display2">Contact</h2>
                 <p>This is the contact section</p>
               </paper-material>
-            </section> -->
+            </section>
 
-          </iron-pages>
+          </iron-pages> -->
         </div>
       </paper-header-panel>
     </paper-drawer-panel>
