--- a/polymerstarterkit/app/styles/app-theme.html
+++ b/polymerstarterkit/app/styles/app-theme.html
@@ -94,6 +94,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     padding: 0 16px;
   }
 
+  /**
+   * Added to make the first item in the filters list sit at the top instead of under
+   * the default padding.
+   */
+  paper-menu {
+    padding: 0;
+  }
+
   #mainToolbar .middle {
     margin-left: auto;
     margin-right: auto;
@@ -139,9 +147,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     .bg {
-      background: white;
+      background: blue;
     }
-
   }
 
   /* Tablet+ */
