--- a/barkbites/platforms/ios/www/elements/elements.vulcanized.html
+++ b/barkbites/platforms/ios/www/elements/elements.vulcanized.html
@@ -10466,9 +10466,8 @@ styles. All other styles should exist as single lines."
     }
 
     .bg {
-      background: white;
+      background: blue;
     }
-
   }
 
   /* Tablet+ */
@@ -14725,7 +14724,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     .filter-item {
       width: 100%;
-      padding: 15px;
+      margin: 15px;
       border-bottom: 1px solid lightgray;
     }
 
