--- a/barkbites/www/elements/bb-filter-list/bb-filter-list.html
+++ b/barkbites/www/elements/bb-filter-list/bb-filter-list.html
@@ -11,7 +11,7 @@
 
     .filter-item {
       width: 100%;
-      padding: 15px;
+      margin: 15px;
       border-bottom: 1px solid lightgray;
     }
 
